# DevUtils

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
apps/Calculator/: CMakeLists.txt  README.md
apps/Calculator/include/: calculator.hpp
apps/Calculator/src/: calculator.cpp  main.cpp
apps/PasswordGenerator/: CMakeLists.txt  README.md
apps/PasswordGenerator/include/: password_generator.hpp
apps/PasswordGenerator/src/: main.cpp  password_generator.cpp
docs/: ARCHITECTURE.md  CHANGELOG.md  ROADMAP.md
docs/reports/: sprint-1-report.md  sprint-2-report.md
scripts/: metrics.ps1
